--- a/src/Template/cup/guestbook/index.twig
+++ b/src/Template/cup/guestbook/index.twig
@@ -17,19 +17,19 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col-1">{{ 'Status'|locale }}</div>
-                            <div class="col">{{ 'Author'|locale }}</div>
-                            <div class="col-2 d-none d-md-block">{{ 'Added date'|locale }}</div>
-                            <div class="col-3 text-right"></div>
+                            <div class="col-4 col-md-2">{{ 'Status'|locale }}</div>
+                            <div class="col-8 col-md">{{ 'Author'|locale }}</div>
+                            <div class="col-6 col-md-2">{{ 'Added date'|locale }}</div>
+                            <div class="col-6 col-md-3 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in list %}
                                 <div class="row">
-                                    <div class="col-1">
+                                    <div class="col-4 col-md-2">
                                         <span class="badge badge-default">{{item.status|locale}}</span>
                                     </div>
-                                    <div class="col">
+                                    <div class="col-8 col-md">
                                         {{ item.name }}
 
                                         {% if item.email %}
@@ -38,8 +38,11 @@
                                             </a>
                                         {% endif %}
                                     </div>
-                                    <div class="col-2 d-none d-md-block">{{ item.date|df('d.m.Y H:i:s') }}</div>
-                                    <div class="col-3 text-right">
+                                    <div class="col-6 col-md-2">
+                                        <span class="d-none d-md-inline">{{ item.date|df('d.m.Y H:i') }}</span>
+                                        <span class="d-inline d-md-none">{{ item.date|df('d.m.y') }}</span>
+                                    </div>
+                                    <div class="col-6 col-md-3 text-right">
                                         <form action="/cup/guestbook/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the entry?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/guestbook/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
