--- a/src/Template/cup/catalog/attribute/index.twig
+++ b/src/Template/cup/catalog/attribute/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Attributes'|locale }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'List of attributes'|locale }} ({{ attributes.count() }})</h2>
             </div>
         </div>
     </div>
@@ -16,7 +16,6 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">{{ 'List of attributes'|locale }} ({{ attributes.count() }})</h4>
                         <a href="/cup/catalog/attribute/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             {{ 'Create attribute'|locale }}
@@ -26,15 +25,15 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-3 text-right"></div>
+                            <div class="col-8 col-sm">{{ 'Title'|locale }}</div>
+                            <div class="col-4 col-sm-3 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in attributes %}
                                 <div class="row">
-                                    <div class="col">{{ item.title }}</div>
-                                    <div class="col-3 text-right">
+                                    <div class="col-8 col-sm">{{ item.title }}</div>
+                                    <div class="col-4 col-sm-3 text-right">
                                         <form action="/cup/catalog/attribute/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the attribute?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/catalog/attribute/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
