--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -31,17 +31,17 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-3">{{ 'Category'|locale }}</div>
-                            <div class="col-5 text-right"></div>
+                            <div class="col-6 col-sm">{{ 'Title'|locale }}</div>
+                            <div class="col-6 col-sm-3">{{ 'Category'|locale }}</div>
+                            <div class="col-12 col-sm-5 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in categories %}
                                 <div class="row">
-                                    <div class="col">{{ item.title|u.truncate(50, '...') }}</div>
-                                    <div class="col-3">{{ category.title ?? '<code>&mdash;</code>'|raw }}</div>
-                                    <div class="col-5 text-right">
+                                    <div class="col-6 col-sm">{{ item.title|u.truncate(50, '...') }}</div>
+                                    <div class="col-6 col-sm-3">{{ category.title ?? '<code>&mdash;</code>'|raw }}</div>
+                                    <div class="col-12 col-sm-5 text-right">
                                         <form action="/cup/catalog/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete a category?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/catalog/category/{{ item.uuid }}" class="btn btn-sm btn-outline-info">
