--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -30,38 +30,41 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col-2">#</div>
-                            <div class="col">{{ 'Client'|locale }}</div>
-                            <div class="col-2">{{ 'Status'|locale }}</div>
-                            <div class="col-2 d-none d-md-block">{{ 'Added date'|locale }}</div>
-                            <div class="col-4 text-right"></div>
+                            <div class="col-4 col-sm-2">#</div>
+                            <div class="col-5 col-sm">{{ 'Client'|locale }}</div>
+                            <div class="col-3 col-sm-2">{{ 'Status'|locale }}</div>
+                            <div class="col-6 col-sm-2">{{ 'Added date'|locale }}</div>
+                            <div class="col-6 col-sm-4 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in list.sortByDesc('Date') %}
                                 <div class="row">
-                                    <div class="col-2">
+                                    <div class="col-4 col-sm-2">
                                         {{ item.serial }}
                                         {% if item.external_id %}
                                             <br/>{{ item.external_id }}
                                         {% endif %}
                                     </div>
-                                    <div class="col">
+                                    <div class="col-5 col-sm">
                                         {% if item.user %}
                                             <a href="/cup/user/{{ item.user_uuid }}/view">{{ item.user.getName() ? item.user.getName() : item.delivery.client }}</a>
                                         {% else %}
                                             {{ item.delivery.client }}
                                         {% endif %}
                                     </div>
-                                    <div class="col-2">
+                                    <div class="col-3 col-sm-2">
                                         {% if item.status_uuid %}
                                             <span class="badge badge-secondary">{{ item.status.title }}</span>
                                         {% else %}
                                             <code>&mdash;</code>
                                         {% endif %}
                                     </div>
-                                    <div class="col-2 d-none d-md-block">{{ item.date|df('d.m.Y H:i') }}</div>
-                                    <div class="col-4 text-right">
+                                    <div class="col-6 col-sm-2">
+                                        <span class="d-none d-md-inline">{{ item.date|df('d.m.Y H:i') }}</span>
+                                        <span class="d-inline d-md-none">{{ item.date|df('d.m.y') }}</span>
+                                    </div>
+                                    <div class="col-6 col-sm-4 text-right">
                                         <form action="/cup/catalog/order/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the order?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/catalog/order/{{ item.uuid }}/invoice" class="btn btn-sm btn-outline-info">
