--- a/src/Template/cup/page/index.twig
+++ b/src/Template/cup/page/index.twig
@@ -25,17 +25,20 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-2 d-none d-md-block">{{ 'Date of publication'|locale }}</div>
-                            <div class="col-3 text-right"></div>
+                            <div class="col-12 col-sm">{{ 'Title'|locale }}</div>
+                            <div class="col-6 col-sm-2">{{ 'Date of publication'|locale }}</div>
+                            <div class="col-6 col-sm-3 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in list %}
                                 <div class="row">
-                                    <div class="col">{{ item.title|u.truncate(50, '...') }}</div>
-                                    <div class="col-2 d-none d-md-block">{{ item.date|df('d.m.Y H:i') }}</div>
-                                    <div class="col-3 text-right">
+                                    <div class="col-12 col-sm">{{ item.title|u.truncate(50, '...') }}</div>
+                                    <div class="col-6 col-sm-2">
+                                        <span class="d-none d-md-inline">{{ item.date|df('d.m.Y H:i') }}</span>
+                                        <span class="d-inline d-md-none">{{ item.date|df('d.m.y') }}</span>
+                                    </div>
+                                    <div class="col-6 col-sm-3 text-right">
                                         <form action="/cup/page/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the page?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/page/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
