--- a/src/Template/cup/user/group/index.twig
+++ b/src/Template/cup/user/group/index.twig
@@ -25,19 +25,19 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <div class="col">{{ 'Title'|locale }}</div>
-                            <div class="col-2 text-center d-none d-md-block">{{ 'Count users'|locale }}</div>
-                            <div class="col-2 d-none d-md-block">{{ 'Permissions'|locale }}</div>
-                            <div class="col-3 text-right"></div>
+                            <div class="col-6 col-sm">{{ 'Title'|locale }}</div>
+                            <div class="col-sm-2 text-center d-none d-sm-block">{{ 'Count users'|locale }}</div>
+                            <div class="col-sm-2 d-none d-sm-block">{{ 'Permissions'|locale }}</div>
+                            <div class="col-6 col-sm-3 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for group in groups %}
                                 {% set users_in_group = users.where('group', group)|count %}
                                 <div class="row">
-                                    <div class="col">{{ group.title }}</div>
-                                    <div class="col-2 text-center d-none d-md-block">{{ users_in_group }}</div>
-                                    <div class="col-2 d-none d-md-block">
+                                    <div class="col-6 col-sm">{{ group.title }}</div>
+                                    <div class="col-sm-2 text-center d-none d-sm-block">{{ users_in_group }}</div>
+                                    <div class="col-sm-2 d-none d-sm-block">
                                         <code>
                                             {% if group.access %}
                                                 {{ 'Count'|locale }}: {{ group.access|count }}
@@ -46,7 +46,7 @@
                                             {% endif %}
                                         </code>
                                     </div>
-                                    <div class="col-3 text-right">
+                                    <div class="col-6 col-sm-3 text-right">
                                         <form action="/cup/user/group/{{ group.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the group?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/user/group/{{ group.uuid }}/edit" class="btn btn-sm btn-info">
